another try to fix scrolling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,7 +144,7 @@ form button {
   }
   .user-message {
     text-align: left;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     margin-bottom: 10px;
     color: #6762EA; /* Dark blue text color */
     font-weight: 600; 
